; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_nfs3_xdr_attrstat.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_nfs3_xdr_attrstat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_rqst = type { i32 }
%struct.nfs_fattr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_rqst*, i32*, %struct.nfs_fattr*)* @nfs3_xdr_attrstat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs3_xdr_attrstat(%struct.rpc_rqst* %0, i32* %1, %struct.nfs_fattr* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rpc_rqst*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.nfs_fattr*, align 8
  %8 = alloca i32, align 4
  store %struct.rpc_rqst* %0, %struct.rpc_rqst** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.nfs_fattr* %2, %struct.nfs_fattr** %7, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = getelementptr inbounds i32, i32* %9, i32 1
  store i32* %10, i32** %6, align 8
  %11 = load i32, i32* %9, align 4
  %12 = call i32 @ntohl(i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @nfs_stat_to_errno(i32 %15)
  store i32 %16, i32* %4, align 4
  br label %21

17:                                               ; preds = %3
  %18 = load i32*, i32** %6, align 8
  %19 = load %struct.nfs_fattr*, %struct.nfs_fattr** %7, align 8
  %20 = call i32 @xdr_decode_fattr(i32* %18, %struct.nfs_fattr* %19)
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %17, %14
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @ntohl(i32) #1

declare dso_local i32 @nfs_stat_to_errno(i32) #1

declare dso_local i32 @xdr_decode_fattr(i32*, %struct.nfs_fattr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
